--- a/css/games/crazyCube.css
+++ b/css/games/crazyCube.css
@@ -1,103 +1,61 @@
 .cube {
   width: 100px;
   height: 100px;
-  background-color: #ccc;
-  margin: 50px auto;
-  perspective: 600px;
+  position: relative;
+  transform-style: preserve-3d;
 }
 
 .face {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  border: 1px solid #000;
-  box-sizing: border-box;
+  width: 100px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #ccc;
+  border: 1px solid #000;
 }
 
-.face.front {
+.dot {
+  width: 10px;
+  height: 10px;
+  background-color: black;
+  border-radius: 50%;
+}
+
+.front {
   transform: translateZ(50px);
 }
-
-.face.back {
+.back {
   transform: rotateY(180deg) translateZ(50px);
 }
-
-.face.right {
+.right {
   transform: rotateY(90deg) translateZ(50px);
 }
-
-.face.left {
+.left {
   transform: rotateY(-90deg) translateZ(50px);
 }
-
-.face.top {
+.top {
   transform: rotateX(90deg) translateZ(50px);
 }
-
-.face.bottom {
+.bottom {
   transform: rotateX(-90deg) translateZ(50px);
 }
 
-/* Анимация для показа 1 */
-@keyframes rotateOne {
-  from {
+.animate {
+  animation: rotate 10s linear forwards;
+}
+@keyframes rotate {
+  0% {
     transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
   }
-  to {
+  25% {
     transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
   }
-}
-
-/* Анимация для показа 2 */
-@keyframes rotateTwo {
-  from {
-    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  75% {
+    transform: rotateX(1440deg) rotateY(1440deg) rotateZ(1440deg);
   }
-  to {
-    transform: rotateX(360deg) rotateY(180deg) rotateZ(0deg);
-  }
-}
-
-/* Анимация для показа 3 */
-@keyframes rotateThree {
-  from {
-    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
-  }
-  to {
-    transform: rotateX(360deg) rotateY(120deg) rotateZ(0deg);
-  }
-}
-
-/* Анимация для показа 4 */
-@keyframes rotateFour {
-  from {
-    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
-  }
-  to {
-    transform: rotateX(360deg) rotateY(90deg) rotateZ(0deg);
-  }
-}
-
-/* Анимация для показа 5 */
-@keyframes rotateFive {
-  from {
-    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
-  }
-  to {
-    transform: rotateX(360deg) rotateY(60deg) rotateZ(0deg);
-  }
-}
-
-/* Анимация для показа 6 */
-@keyframes rotateSix {
-  from {
-    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
-  }
-  to {
-    transform: rotateX(360deg) rotateY(30deg) rotateZ(0deg);
+  100% {
+    transform: rotateX(2160deg) rotateY(2160deg) rotateZ(2160deg);
   }
 }
