--- a/css/common/buttons.css
+++ b/css/common/buttons.css
@@ -1,14 +1,64 @@
-.button {
-  display: inline-block;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  background-color: #007bff;
-  color: #fff;
-  text-decoration: none;
-  cursor: pointer;
+@keyframes glow {
+  0% {
+    filter: drop-shadow(0 0 5px #ff0000);
+  }
+  50% {
+    filter: drop-shadow(0 0 20px #ff0000);
+  }
+  100% {
+    filter: drop-shadow(0 0 5px #ff0000);
+  }
 }
 
-.button:hover {
-  background-color: #0056b3;
+.button {
+  display: inline-block;
+  padding: 20px 40px;
+  border: none;
+  border-radius: 50px;
+  background: linear-gradient(45deg, #ffcc00, #ff6600);
+  color: #fff;
+  font-size: 32px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: pointer;
+  outline: none;
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3);
+  transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
+  margin: 15px;
+  position: relative;
+  overflow: hidden;
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 300%;
+  height: 300%;
+  background-color: rgba(255, 255, 255, 0.2);
+  transition: transform 0.5s, opacity 0.5s;
+  border-radius: 50%;
+  z-index: 0;
+}
+
+.button:hover::before {
+  transform: translate(-50%, -50%) scale(0.1);
+  opacity: 0;
+}
+
+.button:hover,
+.button.active {
+  background: linear-gradient(45deg, #ffd700, #ff8000);
+  transform: scale(1.3) rotate(-3deg);
+  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.5),
+    0 0 50px rgba(255, 255, 255, 0.5) inset;
+  animation: glow 1s infinite alternate; /* Добавляем анимацию мерцания */
+  z-index: 10;
+}
+
+.button:active {
+  transform: scale(0.95);
+  box-shadow: none;
 }
