--- a/css/games/crazyCube.css
+++ b/css/games/crazyCube.css
@@ -1,61 +1,114 @@
 .cube {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   position: relative;
   transform-style: preserve-3d;
+  transform: rotateX(-8deg) rotateY(16deg) rotateZ(-1deg);
+  z-index: 100;
 }
 
 .face {
   position: absolute;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #ccc;
-  border: 1px solid #000;
+  background-color: gold;
+  border: 1px solid #777f00;
 }
 
 .dot {
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
   background-color: black;
   border-radius: 50%;
 }
 
 .front {
-  transform: translateZ(50px);
+  transform: translateZ(100px);
 }
 .back {
-  transform: rotateY(180deg) translateZ(50px);
+  transform: rotateY(180deg) translateZ(100px);
 }
 .right {
-  transform: rotateY(90deg) translateZ(50px);
+  transform: rotateY(90deg) translateZ(100px);
 }
 .left {
-  transform: rotateY(-90deg) translateZ(50px);
+  transform: rotateY(-90deg) translateZ(100px);
 }
 .top {
-  transform: rotateX(90deg) translateZ(50px);
+  transform: rotateX(90deg) translateZ(100px);
 }
 .bottom {
-  transform: rotateX(-90deg) translateZ(50px);
+  transform: rotateX(-90deg) translateZ(100px);
 }
 
-.animate {
+.animate .cube {
   animation: rotate 10s linear forwards;
 }
+
+.animate .front {
+  animation: frontFinish 11s linear forwards;
+}
+
+.animate.cube-wrap {
+  animation: scaled 10s linear forwards;
+}
+
+@keyframes frontFinish {
+  0% {
+    transform: translateZ(100px);
+  }
+  90% {
+    transform: translateZ(100px);
+  }
+  100% {
+    transform: rotateX(90deg) translateZ(900px);
+  }
+}
+
+@keyframes scaled {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(2);
+  }
+  50% {
+    transform: scale(3);
+  }
+  75% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 @keyframes rotate {
   0% {
-    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    transform: rotateX(-8deg) rotateY(16deg) rotateZ(-1deg);
   }
   25% {
     transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+  }
+  50% {
+    transform: rotateX(3600deg) rotateY(3600deg) rotateZ(3600deg);
   }
   75% {
     transform: rotateX(1440deg) rotateY(1440deg) rotateZ(1440deg);
   }
   100% {
-    transform: rotateX(2160deg) rotateY(2160deg) rotateZ(2160deg);
+    transform: rotateX(-8deg) rotateY(16deg) rotateZ(-1deg);
   }
+}
+
+.cube-place {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
 }
