--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
 @import url("common/forms.css");
 @import url("common/modals.css");
 @import url("common/tabs.css");
+@import url("common/games.css");
+@import url("common/global.css");
 
 /* Стили для игр */
 @import url("games/crazyCube.css");
