Added a light switch and wallet layout

--- a/css/common/global.css
+++ b/css/common/global.css
@@ -65,3 +65,18 @@ body {
 .lampsLeft .lamp {
   transform: rotateZ(90deg);
 }
+
+.switcher {
+  width: 60px;
+  height: 81px;
+  background-size: contain;
+  background-image: url("../../images/on.png");
+  position: absolute;
+  right: 60px;
+  top: 60px;
+  cursor: pointer;
+}
+
+.switcher.active {
+  background-image: url("../../images/off.png");
+}
