--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 @import url("common/modals.css");
 @import url("common/tabs.css");
 @import url("common/games.css");
+@import url("common/wallet.css");
 @import url("common/global.css");
 
 /* Стили для игр */
