--- a/css/games/crazyCube.css
+++ b/css/games/crazyCube.css
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: gold;
+  background-color: #ffd700d6;
   border: 1px solid #777f00;
 }
 
@@ -87,6 +87,57 @@
     transform: rotateX(-8deg) rotateY(16deg) rotateZ(-1deg);
   }
 }
+.flex {
+  display: flex;
+}
+.game-wrap {
+  width: 400px;
+  height: 400px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #ffac00;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  background-color: rgb(0 0 0 / 71%);
+}
+
+.bets-wrap {
+  width: 300px;
+  height: 400px;
+  margin: auto;
+  border: 1px solid #ffac00;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background-color: rgb(0 0 0 / 71%);
+}
+
+.bets {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.bets div {
+  border: 2px solid #fff;
+  background-color: #ffac00;
+  width: 60px;
+  height: 60px;
+  margin: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  font-size: 22px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.bets div:hover {
+  font-size: 30px;
+}
 
 .cube-place {
   display: flex;
@@ -95,4 +146,25 @@
   justify-content: space-around;
   width: 100%;
   height: 100%;
+}
+
+.data {
+  background-color: rgb(0 0 0 / 71%);
+  height: 68px;
+  padding: 10px;
+}
+
+.data div {
+  margin-top: 10px;
+}
+
+.bid,
+.winnings {
+  color: #ffac00;
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.winnings {
+  font-size: 24px;
 }
