--- a/css/common/global.css
+++ b/css/common/global.css
@@ -1,11 +1,25 @@
 body {
   background-color: #000;
   color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.content {
+  width: 1100px;
+  margin: auto;
+  position: relative;
   overflow: hidden;
+  height: calc(100vh - 100px);
+}
+
+.content-bg {
   background-image: url("../../images/vegas.jpg");
   background-size: cover;
+  height: calc(100vh - 200px);
   border: 50px solid #000;
-  height: calc(100vh - 100px);
 }
 
 .lamp {
