--- a/css/common/global.css
+++ b/css/common/global.css
@@ -94,3 +94,10 @@ body {
 .switcher.active {
   background-image: url("../../images/off.png");
 }
+
+#usd-id {
+  color: green;
+  font-size: 16px;
+  display: inline-block;
+  margin-left: 5px;
+}
