--- a/css/common/games.css
+++ b/css/common/games.css
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
   border: 1px solid #ffac00;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
+  /* border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px; */
   background-color: rgb(0 0 0 / 71%);
 }
