--- a/css/games/crazyCube.css
+++ b/css/games/crazyCube.css
@@ -346,6 +346,9 @@
   justify-content: space-around;
   width: 100%;
   height: 100%;
+  background-image: url("../../images/table.png");
+  background-size: 660px;
+  background-position: -300px -70px;
 }
 
 .data {
