--- a/css/common/global.css
+++ b/css/common/global.css
@@ -42,6 +42,10 @@ body {
   right: 0;
   text-align: center;
   transform: rotateX(180deg);
+  display: flex;
+  justify-content: space-between;
+  left: 40px;
+  right: 40px;
 }
 
 .lampsBottom {
@@ -50,6 +54,10 @@ body {
   left: 0;
   right: 0;
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+  left: 40px;
+  right: 40px;
 }
 
 .lampsRight {
