--- a/css/common/global.css
+++ b/css/common/global.css
@@ -4,7 +4,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: auto;
+  width: 1100px;
+  min-width: 1100px;
   height: 100vh;
+  min-height: 100vh;
 }
 
 .content {
